adding biggo basics

--- a/public/wire.html
+++ b/public/wire.html
@@ -94,5 +94,5 @@ WebAssembly.instantiateStreaming(fetch("wire.wasm"), go.importObject).then((resu
 });
 </script>
 </head>
-<body></body>
+<body><h1>Wire</h1></body>
 </html>
